--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ venv
 Assignment1/dataset
 Assignment1/code/SYMPTOMDATA.csv
 Assignment1/code/VAERS_COVID_DataAugust2023.csv
+Assignment1/code/VAERS_COVID_SEPTEMBER2023.csv
+Assignment1/code/SYMPTOMDATASEPTEMBER.csv
