--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@ Assignment1/code/SYMPTOMDATA.csv
 Assignment1/code/VAERS_COVID_DataAugust2023.csv
 Assignment1/code/VAERS_COVID_SEPTEMBER2023.csv
 Assignment1/code/SYMPTOMDATASEPTEMBER.csv
+Assignment1/code/SYMPTOMDATANOVEMBER.csv
+Assignment1/code/VAERS_COVID_NOVEMBER.csv
+Assignment2/code/B+TREE_FOR_AUGUST
+Assignment2/code/B+TREE_FOR_AUGUST_AND_SEPTEMBER.txt
+Assignment3/TransactionData.csv
